tree-sitter-asciidoc/test/corpus/admonition.txt
===========
admonition
===========


NOTE: aaaa
TIP: aaaa
IMPORTANT: aaaa
CAUTION: aaaa
WARNING: aaaa

-----

(document
  (section_block
    (admonition
      (admonition_note)
      (line)))
  (section_block
    (admonition
      (admonition_tip)
      (line)))
  (section_block
    (admonition
      (admonition_important)
      (line)))
  (section_block
    (admonition
      (admonition_caution)
      (line)))
  (section_block
    (admonition
      (admonition_warning)
      (line))))
