tree-sitter-asciidoc/test/corpus/block_macro.txt
===========
block_macro
===========

= Document Title
include::attributes-settings.adoc[]
include::attributes-urls.adoc[]
:url-example: https://example.org

Document body.

include::partial.adoc[]

include::target[leveloffset=offset,lines=ranges,tag(s)=name(s),indent=depth,encoding=encoding,opts=optional]

include::{includedir}/fragment1.adoc[]

[source,java]
----
include::{sourcedir}/org/asciidoctor/Asciidoctor.java[]
----

image::sunset.jpg[Sunset]

-----

(document
  (title0
    (title_h0_marker)
    (line)
    (block_macro
      (block_macro_name)
      (target))
    (block_macro
      (block_macro_name)
      (target))
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker)
      (line)
      (comment)))
  (paragraph
    (line))
  (block_macro
    (block_macro_name)
    (target))
  (block_macro
    (block_macro_name)
    (target)
    (block_macro_attr
      (name)
      (value))
    (block_macro_attr
      (name)
      (value))
    (block_macro_attr
      (name)
      (value))
    (block_macro_attr
      (name)
      (value))
    (block_macro_attr
      (name)
      (value))
    (block_macro_attr
      (name)
      (value)))
  (block_macro
    (block_macro_name)
    (target))
  (element_attr
    (element_attr_marker)
    (attr_value)
    (element_attr_marker))
  (raw_block
    (raw_block_marker)
    (raw_block_body
      (block_macro
        (block_macro_name)
        (target)))
    (raw_block_marker))
  (block_macro
    (block_macro_name)
    (target)
    (block_macro_attr
      (name))))
