tree-sitter-asciidoc/test/corpus/breaks.txt
===========
breaks
===========

'''

<<<

'''

[.column]
<<<

-----

(document
  (breaks
    (breaks_marker))
  (breaks
    (breaks_marker))
  (breaks
    (breaks_marker))
  (element_attr
    (element_attr_marker))
  (breaks
    (breaks_marker)))
