tree-sitter-asciidoc/test/corpus/comment.txt
===========
comment
===========

// A single-line comment.

//

////
block comment
////

https://www.abcdefg.com

-----

(document
  (line_comment
    (line_comment_marker))
  (line_comment
    (line_comment_marker))
  (comment_block
    (block_comment_marker)
    (comment_block_body)
    (block_comment_marker))
  (section_block
    (paragraph
      (line))))
