tree-sitter-asciidoc/test/corpus/included.txt
===========
included
===========

= My book

:leveloffset: +1

include::chapter01.adoc[]

include::chapter02.adoc[]

include::chapter03.adoc[]

:leveloffset: -1

-----

(document
  (title0
    (title_h0_marker)
    (line))
  (section_block
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker)
      (line)))
  (block_macro
    (block_macro_name)
    (target))
  (block_macro
    (block_macro_name)
    (target))
  (block_macro
    (block_macro_name)
    (target))
  (section_block
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker)
      (line))))
