tree-sitter-asciidoc/test/corpus/session_block.txt
==============
session_block
==============

* Apples
* Oranges

[]
.title
. Wash
. Slice

-----

(document
  (unordered_list
    (ul_item
      (unordered_list_marker
        (list_marker_star))
      (line))
    (ul_item
      (unordered_list_marker
        (list_marker_star))
      (line)))
  (element_attr
    (element_attr_marker)
    (attr_value)
    (element_attr_marker))
  (block_title
    (block_title_marker)
    (line))
  (ordered_list
    (ol_item
      (ordered_list_marker
        (list_marker_dot))
      (line))
    (ol_item
      (ordered_list_marker
        (list_marker_dot))
      (line))))
