tree-sitter-asciidoc/test/corpus/title.txt
===========
title
===========

= Document Title (Level 0)
:url-org: https://example.org/projects
:url-project: {url-org}/project-name
:toc:
:toc-title: Table of Adventures

== Level 1 Section Title

=== Level 2 Section Title

==== Level 3 Section Title

===== Level 4 Section Title

====== Level 5 Section Title

== Another Level 1 Section Title

= Document Title

= Illegal Level 0 Section (violates rule #1)

== First Section

==== Illegal Nested Section (violates rule #2)

-----

(document
  (title0
    (title_h0_marker)
    (line)
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker)
      (line))
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker)
      (line))
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker))
    (document_attr
      (document_attr_marker)
      (attr_name)
      (document_attr_marker)
      (line)))
  (title1
    (title_h1_marker)
    (line))
  (title2
    (title_h2_marker)
    (line))
  (title3
    (title_h3_marker)
    (line))
  (title4
    (title_h4_marker)
    (line))
  (title5
    (title_h5_marker)
    (line))
  (title1
    (title_h1_marker)
    (line))
  (title0
    (title_h0_marker)
    (line))
  (title0
    (title_h0_marker)
    (line))
  (title1
    (title_h1_marker)
    (line))
  (title3
    (title_h3_marker)
    (line)))
